--- a/src/styles.css
+++ b/src/styles.css
@@ -79,5 +79,5 @@ body {
 @tailwind components;
 @tailwind utilities;
 
-html, body { height: 100%; }
+html, body { height: 100%; background-color: rgb(233, 232, 232); }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
